2006-03-09  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Added Kodak C360 (from Debian) 

2006-02-17  Marcus Meissner  <marcus@jet.franken.de>

	* ptpip.c,ptp.h,library.c:
	
          PTP/IP protocol implementation.

	  Currently not enabled, just included for
	  reference and the not so faint at heart.

	  Missing:
	  - Still using hardcoded IP address and GUID.
	  - autoconf the UNIX socket function stuff.
	  - PTPIP event handling

2006-02-17  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: Return the actual PTP protocol return
	  code from the ptp_transaction(). 

	  This makes us see the actual errors the camera
	  reports.

2006-02-06  Marcus Meissner  <marcus@jet.franken.de>
	* library.c: Added EOS 5D

2006-02-05  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Use event_check and event_wait
	  functions from params struct. Initialise those
	  entries.

2006-01-31  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Enabled Canon SDRAM capture,
	  using the same methods as the Nikon capture.

2006-01-31  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Toshiba Gigabeat MTP player.

2006-01-30  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon SDRAM capture.
	  Downloads images directly after capture.

	  Added configuration for Capture Target 
	  (Card or SDRAM).

2006-01-24  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp-bugs.h, library.c: Added bug handling where some canon
	  cameras send ObjectDeleted events on DeleteObject.

	  Since EOS firmware doesnt do that, use a bugflag
	  instead of vendor check.

2006-01-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added HP Photosmart E317
		     Added Canon PowerShot S80.
	* library.c: Relaxed Association checks for directories.
	  The E317 sees AssocType 0x0 (undefined) for DCIM/ et.al.
	
	  Avoid buffer overflows on too long filenames.
	
	  Enabled Creative Zen Micro (was failing on the 512 byte
	  problem before, should be fixed now).
